[package]
name = "wolges"
version = "0.1.0"
authors = ["Andy Kurnia"]
edition = "2024"
default-run = "auto"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
csv = "1.3.1"
num_cpus = "1.16.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
tokio = { version = "1.45.0", features = ["full"] }

[[bin]]
name = "auto"
path = "src/main_auto.rs"

[[bin]]
name = "buildlex"
path = "src/main_build.rs"

[[bin]]
name = "endgame"
path = "src/main_endgame.rs"

[[bin]]
name = "json"
path = "src/main_json.rs"

[[bin]]
name = "leave"
path = "src/main_leave.rs"

[[bin]]
name = "lex"
path = "src/main_lex.rs"

[[bin]]
name = "read"
path = "src/main_read.rs"

[[bin]]
name = "shell"
path = "src/main_shell.rs"

[[bin]]
name = "simmer"
path = "src/main_simmer.rs"
