[package]
name = "wolges"
version = "0.1.0"
authors = ["Andy Kurnia"]
edition = "2024"
default-run = "auto"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[dependencies]
csv = "1.4.0"
num_cpus = "1.17.0"
rand = { version = "0.10.2", features = ["chacha"] }
rustyline = { version = "18.0.1", optional = true }
rustyline-derive = { version = "0.12.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = { version = "1.1.1", optional = true }

[features]
# The interactive shell (main_shell + rlhelper) is the only consumer of the
# REPL crates, and those crates do not build for wasm32. Gating them keeps a
# default `wolges` build wasm-friendly so downstreams (wolges-wasm) can depend
# on the crate directly instead of vendoring modules.
shell = ["dep:rustyline", "dep:rustyline-derive", "dep:shell-words"]

[[bin]]
name = "auto"
path = "src/main_auto.rs"

[[bin]]
name = "buildlex"
path = "src/main_build.rs"

[[bin]]
name = "endgame"
path = "src/main_endgame.rs"

[[bin]]
name = "json"
path = "src/main_json.rs"

[[bin]]
name = "leave"
path = "src/main_leave.rs"

[[bin]]
name = "lex"
path = "src/main_lex.rs"

[[bin]]
name = "read"
path = "src/main_read.rs"

[[bin]]
name = "shell"
path = "src/main_shell.rs"
required-features = ["shell"]

[[bin]]
name = "simmer"
path = "src/main_simmer.rs"

[[bin]]
name = "movegen-test"
path = "src/main_movegen_test.rs"
